k3s/apps/argocd/templates/argocd-server-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  - port: 443
    targetPort: 8080
    nodePort: 30443
    protocol: TCP
    name: https
  selector:
    app.kubernetes.io/name: argocd-server
